# raster_blend2d

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: wheels.yml
docs/: release.md
examples/: basic_usage.py
src/raster_blend2d/: __init__.py  rasterizer.py
src/raster_blend2d_native/: bindings.cpp
tests/: test_import.py  test_polygon_rasterizer.py
