[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.12",
  "numpy>=1.23",
]
build-backend = "scikit_build_core.build"

[project]
name = "raster-blend2d"
version = "0.1.5"
description = "Python bindings for Blend2D focused on layout rasterization workflows."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
]
license = { text = "MIT" }
authors = [
  { name = "raster-blend2d contributors" },
]
keywords = ["blend2d", "rasterization", "layout", "polygon", "coverage"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/diffractlight/raster_blend2d"
Issues = "https://github.com/diffractlight/raster_blend2d/issues"
Repository = "https://github.com/diffractlight/raster_blend2d"

[tool.scikit-build]
cmake.version = ">=3.21"
wheel.packages = ["src/raster_blend2d"]
sdist.include = [
  "CMakeLists.txt",
  "src/raster_blend2d/*.py",
  "src/raster_blend2d_native/*.cpp",
  "extern/blend2d/**",
  "extern/asmjit/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = ["*-musllinux_*", "pp*"]
test-command = "pytest {project}/tests"
test-requires = ["pytest", "numpy"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
